--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -10,9 +10,7 @@
   min-height: 100vh;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: minmax(120px, auto) repeat(5, 100px);
-  margin: 10px 420px;
-  border: 100px solid gray;
-  border-radius: 20px;
+
 }
 
 button {
@@ -45,6 +43,8 @@ button {
   font-family: lores-12, sans-serif;
   font-weight: 700;
   font-style: normal;
+  border: 2px gray solid;
+  background-color: rgba(0, 0, 0, 0.3)
 }
 
 .output .previous-operand {
