--- a/scooby-list/style.css
+++ b/scooby-list/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     background-color: #BEBE00;
     font-family: 'Titillium Web', sans-serif;
+    margin-bottom: 500px;
 }
 
 .container {
