--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -1,38 +1,41 @@
 * {
-  box-sizing: border-box;
   margin: 0;
 }
 
+@font-face {
+  font-family: 'Roboto Mono', monospace;
+}
+
+body {
+  background-color: lightblue;
+  font-family: 'Roboto Mono', monospace;
+
+}
+
 .container {
+  margin-top: 40px;
+  width: 440px;
+  padding: 20px;
+  border-radius: 9px;
+  border: 4px solid white;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
   display: grid;
-  justify-content: center;
-  align-content: center;
-  min-height: 100vh;
-  grid-template-columns: repeat(4, 100px);
-  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
-
-}
-
-button {
-  font-family: discourse-middle-fill, sans-serif;
-  font-weight: 200;
-  font-style: normal;
-  background-color: black;
-  color: white;
-  cursor: pointer;
-  font-size: 2rem;
-  border: 5px solid wheat;
-  outline: none;
-}
-
-.container>button:hover {}
-
-.span-two {
-  grid-column: span 2;
+  grid-template-rows: 100px;
+  grid-auto-rows: 100px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 15px;
+  background-color: #222;
+  box-shadow: 23px 19px 7px 2px rgba(56, 56, 56, 0.48);
 }
 
 .output {
-  grid-column: 1/-1;
+  grid-column: span 4;
+  border-radius: 4px;
+  border: 4px solid white;
+  box-sizing: border-box;
+  background-color: #e3e3e3;
   display: flex;
   align-items: flex-end;
   justify-content: space-around;
@@ -40,17 +43,34 @@ button {
   padding: 10px;
   word-wrap: break-word;
   word-break: break-all;
-  font-family: lores-12, sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  border: 2px gray solid;
-  background-color: rgba(0, 0, 0, 0.3)
 }
 
-.output .previous-operand {
-  font-size: 35px;
+.previous-operand {
+  font-size: 1.5rem;
+  color: rgba(55, 55, 55, 0.75);
 }
 
-.output .current-operand {
-  font-size: 50px;
+.current-operand {
+  font-size: 2.5rem;
+}
+
+.span-two {
+  grid-column: span 2;
+}
+
+button {
+  border: none;
+  font-size: 40px;
+  color: white;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 300;
+  border-radius: 4px;
+}
+
+.orange-btn {
+  background-color: #EB862D;
+}
+
+.grey-btn {
+  background-color: grey;
 }
